<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.frankframework</groupId>
	<artifactId>frank-doc-parent</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<name>Frank!Doc Parent</name>
	<description>Documentation application for the Frank!Framework</description>
	<url>https://github.com/frankframework/frank-doc</url>

	<properties>
		<revision>4.3.0-SNAPSHOT</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<prerequisites>
		<maven>3.6.0</maven>
	</prerequisites>

	<organization>
		<name>frankframework.org</name>
		<url>https://frankframework.org</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Martijn Dirkse</name>
			<email>martijn@ibissource.org</email>
			<organization>WeAreFrank!</organization>
			<organizationUrl>https://wearefrank.nl</organizationUrl>
		</developer>
		<developer>
			<name>Niels Meijer</name>
			<email>niels@frankframework.org</email>
			<organization>Frank!Framework</organization>
			<organizationUrl>https://frankframework.org</organizationUrl>
		</developer>
		<developer>
			<name>Sergi Philipsen</name>
			<email>sergi@frankframework.org</email>
			<organization>Frank!Framework</organization>
			<organizationUrl>https://frankframework.org</organizationUrl>
		</developer>
		<developer>
			<name>Vivy Booman</name>
			<email>vivy@frankframework.org</email>
			<organization>Frank!Framework</organization>
			<organizationUrl>https://frankframework.org</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/frankframework/frank-doc</url>
		<connection>scm:git:https://github.com/frankframework/frank-doc.git</connection>
		<developerConnection>scm:git:https://github.com/frankframework/frank-doc.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.frankframework</groupId>
				<artifactId>frank-doc-doclet</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.frankframework</groupId>
				<artifactId>frank-doc-frontend</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<compilerArgs>
              <!-- Contains class com.sun.tools.javac.util.Context which we need for testing, in org.frankframework.frankdoc.wrapper.TestUtil -->
							<arg>--add-exports</arg>
							<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>

              <!-- Contains class com.sun.tools.javac.file.JavacFileManager which we need for testing, in org.frankframework.frankdoc.wrapper.TestUtil -->
							<arg>--add-exports</arg>
							<arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>

              <!-- Contains class jdk.javadoc.internal.tool.Start which we need for testing, in org.frankframework.frankdoc.wrapper.TestUtil -->
							<arg>--add-exports</arg>
							<arg>jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<archive>
							<addMavenDescriptor>true</addMavenDescriptor>
							<manifest>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.0</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.6.3</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<failOnError>false</failOnError>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<doclint>none</doclint>
						<useStandardDocletOptions>true</useStandardDocletOptions>
						<additionalOptions>
							<additionalOption>--add-exports</additionalOption>
							<additionalOption>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalOption>
							<additionalOption>--add-exports</additionalOption>
							<additionalOption>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalOption>
						</additionalOptions>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.1</version>
					<configuration>
						<skip>true</skip>
						<skipDeploy>true</skipDeploy>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.6.0</version>
					<configuration>
						<updatePomFile>true</updatePomFile>
						<flattenMode>resolveCiFriendliesOnly</flattenMode>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>initialize</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>default-modules</id><!-- Profile defaults to ON, when the property is set it will turn off -->
			<activation>
				<property>
					<name>!no-default-modules</name>
				</property>
			</activation>
			<modules>
				<module>frank-doc-doclet</module>
				<module>frank-doc-frontend</module>
			</modules>
		</profile>
		<profile>
			<id>frankframework</id>
			<distributionManagement>
				<repository>
					<id>frankframework</id>
					<url>https://nexus.frankframework.org/content/repositories/releases</url>
				</repository>
				<snapshotRepository>
					<id>frankframework</id>
					<url>https://nexus.frankframework.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<site>
					<id>www.frankframework.org</id>
					<url>file:target/site-deploy</url>
				</site>
			</distributionManagement>
			<repositories>
				<repository>
					<id>frankframework</id>
					<url>https://nexus.frankframework.org/content/groups/public</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.4</version>
						<configuration>
							<passphrase>${gpg.passphrase}</passphrase>
							<gpgArguments>
								<!-- This is necessary for gpg to not try to use the pinentry programs -->
								<arg>--batch</arg>
								<arg>--no-tty</arg>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>ossrh</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.9.0</version>
						<extensions>true</extensions>
						<configuration>
							<!-- Don't release the build directly after it's been published to Central (staging). -->
							<autoPublish>false</autoPublish>
							<!-- Central OSS Server -->
							<publishingServerId>ossrh</publishingServerId>
							<!-- Wait until the deployment bundle has been uploaded and validated. -->
							<waitUntil>validated</waitUntil>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
